# free-monad-interpreter-for-pascal

./: Cargo.toml  README.md
pascal/: fibonacci.pas  fizzbuzz.pas  helloworld.pas
src/: examples.rs  front_end.rs  il.rs  interpreters.rs  lib.rs  main.rs
src/front_end/: pascal_grammar.pest
src/interpreters/: pretty_printer.rs
tests/: integration_test.rs
