[package]
name = "free_monad_interpreter_for_pascal"
version = "0.1.0"
edition = "2021"
authors = ["Martin Jul"]
repository = "https://github.com/mjul/free-monad-interpreter-for-pascal"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
paste = "1.0.14"
pest = "2.7.3"
pest_derive = "2.7.3"
